# wse-exercises

./: .gitignore  CHANGELOG.rst  Makefile  README.md  pyproject.toml
src/wse_exercises/: __init__.py
src/wse_exercises/base/: componets.py  enums.py  exercise.py  interface.py  interfaces.py  mixins.py  task.py
src/wse_exercises/core/: __init__.py
src/wse_exercises/core/math/: __init__.py  enums.py  exercises.py
src/wse_exercises/core/math/base/: exercise.py
src/wse_exercises/core/math/services/: __init__.py  operand_generator.py
src/wse_exercises/core/mathem/: __init__.py  calculation_components.py  exceptions.py  exercise_config.py  exercises.py  interfaces.py  task.py  task_factories.py
src/wse_exercises/core/mathem/base/: exercise.py  exercise_config.py  services.py  servises.py  task.py  task_factory.py
src/wse_exercises/core/mathem/interfaces/: __init__.py  iconfig.py  iexercise.py  iservices.py  itasks.py
src/wse_exercises/core/mathem/services/: operand_generator.py
src/wse_exercises/interfaces/: __init__.py  iexercises.py
src/wse_exercises/utils/: __init__.py  logger.py
tests/: conftest.py
tests/unit/base/: __init__.py
tests/unit/core/math/: test_interface.py
tests/unit/core/mathem/: __init__.py  test_dto_serialization.py  test_interface.py  test_serialization.py
