[tool.poetry]
name = "wse-exercises"
version = "0.1.0"
description = "Exercises for WSE applications"
authors = ["Sergei Mikurov <454004@mail.ru>"]
readme = "README.md"
packages = [{include = "wse_exercises", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
